@@ -1,402 +1,423 @@
-# Forum Application - User Documentation
+# Forum Application
+
+[![Java](https://img.shields.io/badge/Java-11+-blue.svg)](https://www.oracle.com/java/)
+[![Maven](https://img.shields.io/badge/Maven-3.6+-red.svg)](https://maven.apache.org/)
+[![MySQL](https://img.shields.io/badge/MySQL-8.0+-orange.svg)](https://www.mysql.com/)
+[![Tomcat](https://img.shields.io/badge/Tomcat-9.0+-yellow.svg)](https://tomcat.apache.org/)
 
 ## Overview
 
-This Forum Application is a comprehensive distributed web application developed using Advanced Java Programming concepts. It provides a platform for users to create topics, post comments, and engage in discussions through a modern web interface.
+The Forum Application is a comprehensive distributed web application developed using Advanced Java Programming concepts. It provides a robust platform for users to create topics, post comments, engage in discussions, and share knowledge through a modern, responsive web interface.
 
 **Developer:** Simphiwe Radebe  
-**Course:** Advanced Java Programming Assessments  
-**Module Code:** ITHCA0  
-**Project:** Project 1 - Distributed Applications
+**Course:** Advanced Java Programming (ITHCA0)  
+**Institution:** Eduvos  
+**Project:** Project 1 - Distributed Applications  
+**Version:** 1.0.0
 
-## Features
-
-### Core Functionality
-- ✅ User Registration and Authentication
-- ✅ Secure Login/Logout System
-- ✅ Password Reset Functionality
-- ✅ User Profile Management
-- ✅ Topic Creation and Management
-- ✅ Comment System with Replies
-- ✅ Real-time Activity Logging
-- ✅ Search Functionality
-- ✅ Responsive Web Design
-
-### Technical Implementation
-- **Frontend:** JSP/Servlets with Bootstrap 5
-- **Backend:** Java with DAO Pattern
-- **Database:** MySQL with proper relationships
-- **Web Services:** RESTful API endpoints
-- **Security:** Password hashing, input validation
-- **Logging:** Comprehensive activity logging
-
-## Installation Guide
+## 🚀 Quick Start
 
 ### Prerequisites
-- Java 8 or higher
-- Apache Tomcat 9.0 or higher
-- MySQL 8.0 or higher
-- Maven 3.6 or higher
-- Web browser (Chrome, Firefox, Safari, Edge)
+- Java 11 or higher
+- Apache Maven 3.6+
+- MySQL 8.0+
+- Apache Tomcat 9.0+
 
-### Step 1: Database Setup
-
-1. **Install MySQL** and create a new database:
-```sql
-CREATE DATABASE forum_db;
-```
-
-2. **Run the database schema** (database_schema.sql):
+### Automated Deployment
 ```bash
-mysql -u root -p forum_db < database_schema.sql
+# Clone the repository
+git clone <repository-url> forum-app
+cd forum-app
+
+# Set up environment variable
+export CATALINA_HOME=/path/to/your/tomcat
+
+# Run the automated deployment script
+chmod +x deploy.sh
+./deploy.sh
 ```
 
-3. **Update database configuration** in `DatabaseConfig.java`:
+### Manual Build and Deploy
+```bash
+# Build the project
+mvn clean compile package
+
+# Deploy to Tomcat
+rm -rf $CATALINA_HOME/webapps/forum-app*
+cp target/forum-app.war $CATALINA_HOME/webapps/
+
+# Start Tomcat and view logs
+$CATALINA_HOME/bin/catalina.sh start
+tail -f $CATALINA_HOME/logs/catalina.out
+```
+
+**Access the application:** http://localhost:8080/forum-app/
+
+## 📚 Documentation
+
+### Complete Guides
+- **[Installation Guide](INSTALLATION_GUIDE.md)** - Comprehensive setup instructions
+- **[User Guide](USER_GUIDE.md)** - Complete user documentation and tutorials
+- **[API Documentation](http://localhost:8080/forum-app/api)** - RESTful API reference
+
+### Quick Links
+- [Database Setup](#database-setup)
+- [Features Overview](#features)
+- [Technology Stack](#technology-stack)
+- [Project Structure](#project-structure)
+
+## ✨ Features
+
+### Core Functionality
+- ✅ **User Management**
+    - Secure registration and authentication
+    - Password reset functionality
+    - Profile management and updates
+    - Session management with "Remember Me"
+
+- ✅ **Forum Features**
+    - Topic creation and management
+    - Nested comment system with replies
+    - Real-time search functionality
+    - Activity logging and tracking
+
+- ✅ **Technical Features**
+    - RESTful API endpoints
+    - Responsive Bootstrap 5 UI
+    - MySQL database with proper relationships
+    - Input validation and security measures
+    - Comprehensive error handling
+
+### Advanced Capabilities
+- **Web Services Integration:** RESTful API for all major operations
+- **Security:** Password hashing, input sanitization, SQL injection prevention
+- **Logging:** Comprehensive activity logging for all user actions
+- **Responsive Design:** Mobile-friendly interface that adapts to all screen sizes
+- **Search:** Full-text search across topics and descriptions
+
+## 🛠 Technology Stack
+
+### Backend
+- **Java 11+** - Core programming language
+- **Servlets & JSP** - Web framework
+- **Maven** - Build tool and dependency management
+- **MySQL 8.0** - Database management system
+- **JDBC** - Database connectivity
+
+### Frontend
+- **Bootstrap 5** - CSS framework for responsive design
+- **Font Awesome 6** - Icon library
+- **JavaScript/jQuery** - Client-side interactivity
+- **JSP/JSTL** - Server-side templating
+
+### Infrastructure
+- **Apache Tomcat 9.0+** - Application server
+- **MySQL Connector/J** - Database driver
+- **Java Util Logging** - Application logging
+
+## 📁 Project Structure
+
+```
+forum-app/
+├── src/
+│   ├── main/
+│   │   ├── java/com/forum/
+│   │   │   ├── config/          # Database configuration
+│   │   │   ├── dao/             # Data Access Objects
+│   │   │   ├── filter/          # Security and request filters
+│   │   │   ├── listener/        # Application event listeners
+│   │   │   ├── model/           # Data models and entities
+│   │   │   ├── service/         # Business logic layer
+│   │   │   ├── servlet/         # Web controllers
+│   │   │   ├── util/            # Utility classes
+│   │   │   └── webservice/      # REST API endpoints
+│   │   ├── resources/           # Configuration files
+│   │   └── webapp/
+│   │       ├── WEB-INF/
+│   │       │   ├── jsp/         # JSP pages and templates
+│   │       │   └── web.xml      # Web application configuration
+│   │       ├── css/             # Custom stylesheets
+│   │       ├── js/              # JavaScript files
+│   │       └── images/          # Static image assets
+│   └── test/                    # Unit and integration tests
+├── database_schema.sql          # Database creation script
+├── deploy.sh                    # Automated deployment script
+├── pom.xml                      # Maven project configuration
+├── INSTALLATION_GUIDE.md        # Comprehensive installation guide
+├── USER_GUIDE.md               # Complete user documentation
+└── README.md                   # This file
+```
+
+## 🗄 Database Setup
+
+### Quick Database Setup
+```sql
+-- Create database and user
+CREATE DATABASE forum_db CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
+CREATE USER 'forum_user'@'localhost' IDENTIFIED BY 'forum_password_2025';
+GRANT ALL PRIVILEGES ON forum_db.* TO 'forum_user'@'localhost';
+FLUSH PRIVILEGES;
+
+-- Import schema
+mysql -u forum_user -p forum_db < database_schema.sql
+```
+
+### Database Schema
+The application uses a normalized database schema with the following main entities:
+- **users** - User accounts and authentication
+- **topics** - Forum discussion topics
+- **comments** - Comments on topics
+- **replies** - Replies to comments
+
+For detailed schema information, see [database_schema.sql](database_schema.sql).
+
+## 🔧 Configuration
+
+### Database Configuration
+Update database settings in `src/main/java/com/forum/config/DatabaseConfig.java`:
 ```java
 private static final String DATABASE_URL = "jdbc:mysql://localhost:3306/forum_db";
-private static final String DATABASE_USERNAME = "your_username";
-private static final String DATABASE_PASSWORD = "your_password";
+private static final String DATABASE_USERNAME = "forum_user";
+private static final String DATABASE_PASSWORD = "forum_password_2025";
 ```
 
-### Step 2: Application Deployment
+### Application Properties
+Configuration options in `src/main/resources/application.properties`:
+```properties
+db.url=jdbc:mysql://localhost:3306/forum_db
+db.username=forum_user
+db.password=forum_password_2025
+app.name=Forum Application
+log.level=INFO
+```
 
-1. **Clone or extract** the project files to your workspace
+## 🚀 Deployment Options
 
-2. **Build the project** using Maven:
+### 1. Automated Deployment (Recommended)
+Use the provided deployment script for quick and reliable deployments:
+```bash
+./deploy.sh                 # Full deployment with restart
+./deploy.sh --no-restart    # Deploy without restarting Tomcat
+./deploy.sh --logs-only     # View logs only
+```
+
+### 2. Manual Deployment
+For manual control over the deployment process:
 ```bash
 mvn clean compile package
+rm -rf $CATALINA_HOME/webapps/forum-app*
+cp target/forum-app.war $CATALINA_HOME/webapps/
+$CATALINA_HOME/bin/catalina.sh restart
 ```
 
-3. **Deploy to Tomcat:**
-    - Copy the generated WAR file to Tomcat's `webapps` directory
-    - Or deploy directly through Tomcat Manager
+### 3. IDE Integration
+- **IntelliJ IDEA:** Configure Tomcat server in Run Configurations
+- **Eclipse:** Use Server adapter for Tomcat deployment
+- **VS Code:** Use Java Extension Pack with Tomcat integration
 
-4. **Start Tomcat server:**
+## 📊 API Endpoints
+
+The application provides RESTful API endpoints for integration:
+
+### User Management
+```
+GET    /api/users          # List all users
+POST   /api/users          # Create new user
+GET    /api/users/{id}     # Get user details
+PUT    /api/users/{id}     # Update user
+DELETE /api/users/{id}     # Delete user
+```
+
+### Topic Management
+```
+GET    /api/topics         # List all topics
+POST   /api/topics         # Create new topic
+GET    /api/topics/{id}    # Get topic details
+PUT    /api/topics/{id}    # Update topic
+DELETE /api/topics/{id}    # Delete topic
+```
+
+### Comment Management
+```
+GET    /api/comments       # Get comments for topic
+POST   /api/comments       # Create new comment
+PUT    /api/comments/{id}  # Update comment
+DELETE /api/comments/{id}  # Delete comment
+```
+
+For complete API documentation, visit: http://localhost:8080/forum-app/api
+
+## 🧪 Testing
+
+### Running Tests
 ```bash
-./catalina.sh start  # Linux/Mac
-catalina.bat start   # Windows
+# Run all tests
+mvn test
+
+# Run specific test class
+mvn test -Dtest=UserServiceTest
+
+# Run tests with coverage report
+mvn test jacoco:report
 ```
 
-### Step 3: Database Driver Configuration
+### Test Categories
+- **Unit Tests:** Test individual components and methods
+- **Integration Tests:** Test database operations and services
+- **Web Tests:** Test servlet functionality and HTTP responses
 
-1. **Download MySQL Connector/J** (version 8.0 or higher)
-2. **Place the JAR file** in:
-    - `WEB-INF/lib/` directory of your application, OR
-    - Tomcat's `lib` directory for server-wide availability
+## 🔒 Security Features
 
-### Step 4: Application Configuration
+### Implemented Security Measures
+- **Password Hashing:** BCrypt hashing for secure password storage
+- **Input Validation:** Server-side validation for all user inputs
+- **SQL Injection Prevention:** Parameterized queries throughout
+- **Session Management:** Secure session handling with configurable timeouts
+- **CSRF Protection:** Form token validation for state-changing operations
+- **XSS Prevention:** Input sanitization and output encoding
 
-1. **Verify web.xml configuration** matches your environment
-2. **Check log directory permissions** (application creates `logs/` folder)
-3. **Test database connection** by accessing the application
-
-## Usage Guide
-
-### Getting Started
-
-1. **Access the application:**
-   ```
-   http://localhost:8080/forum-app/
-   ```
-
-2. **Register a new account:**
-    - Click "Create one here" on the login page
-    - Fill in all required information
-    - Password must meet security requirements:
-        - At least 8 characters
-        - Contains uppercase and lowercase letters
-        - Contains at least one digit
-        - Contains at least one special character
-
-3. **Login to your account:**
-    - Use your email and password
-    - Optional: Check "Remember me" for extended sessions
-
-### Main Features
-
-#### Topic Management
-- **Creating Topics:**
-    - Click "Create New Topic" button
-    - Enter a descriptive title (max 255 characters)
-    - Provide detailed description (max 5000 characters)
-    - Submit to publish your topic
-
-- **Viewing Topics:**
-    - Browse topics on the main page
-    - Click topic title to view full discussion
-    - See comment count and last activity
-
-- **Searching Topics:**
-    - Use the search box in the navigation
-    - Search by title or description content
-
-#### Comments and Replies
-- **Posting Comments:**
-    - Open any topic
-    - Scroll to comment section
-    - Enter your comment (max 2000 characters)
-    - Submit to post
-
-- **Replying to Comments:**
-    - Click "Reply" on any comment
-    - Enter your reply (max 1000 characters)
-    - Submit to post reply
-
-#### User Profile
-- **Updating Profile:**
-    - Click your name in navigation → Profile
-    - Update first name, last name, phone number
-    - Save changes
-
-- **Changing Password:**
-    - Go to Profile page
-    - Enter current password and new password
-    - Confirm new password and save
-
-#### Password Recovery
-- **Forgot Password:**
-    - Click "Forgot password?" on login page
-    - Enter your email address
-    - Follow reset instructions (token provided for demo)
-
-### Navigation
-
-#### Main Navigation Menu
-- **Home:** Returns to main topic list
-- **My Topics:** Shows topics you've created
-- **Search:** Find topics by keywords
-- **Profile:** Manage your account settings
-- **Logout:** End your session securely
-
-#### Topic Sorting Options
-- **Latest:** Most recently active topics first
-- **Popular:** Topics with most comments first
-- **Oldest:** Oldest topics first
-
-## Web Services API
-
-The application provides RESTful web services for external integration:
-
-### Base URL
-```
-http://localhost:8080/forum-app/api/
+### Security Configuration
+Session timeout and security settings in `web.xml`:
+```xml
+<session-config>
+    <session-timeout>30</session-timeout>
+    <cookie-config>
+        <http-only>true</http-only>
+        <secure>false</secure>
+    </cookie-config>
+</session-config>
 ```
 
-### Available Endpoints
+## 📈 Performance Considerations
 
-#### User Management
-- `POST /api/users` - Create new user
-- `GET /api/users/{id}` - Get user by ID
-- `PUT /api/users/{id}` - Update user information
+### Database Optimization
+- Proper indexing on frequently queried columns
+- Connection pooling for efficient database usage
+- Query optimization with prepared statements
 
-#### Topic Management
-- `GET /api/topics` - Get all topics
-- `POST /api/topics` - Create new topic
-- `GET /api/topics/{id}` - Get topic by ID
-- `PUT /api/topics/{id}` - Update topic
-- `DELETE /api/topics/{id}` - Delete topic
+### Application Performance
+- Efficient DAO pattern implementation
+- Proper resource management (connection closing)
+- Optimized JSP rendering with minimal inline Java
 
-#### Comment Management
-- `GET /api/comments/topic/{topicId}` - Get comments for topic
-- `POST /api/comments` - Create new comment
-- `PUT /api/comments/{id}` - Update comment
-- `DELETE /api/comments/{id}` - Delete comment
-
-#### Reply Management
-- `GET /api/replies/comment/{commentId}` - Get replies for comment
-- `POST /api/replies` - Create new reply
-- `PUT /api/replies/{id}` - Update reply
-- `DELETE /api/replies/{id}` - Delete reply
-
-### Example API Usage
-
-#### Create New Topic
+### Recommended Production Settings
 ```bash
-curl -X POST http://localhost:8080/forum-app/api/topics \
-  -H "Content-Type: application/json" \
-  -d '{
-    "title": "New Discussion Topic",
-    "description": "This is a sample topic created via API",
-    "userId": 1
-  }'
+# JVM Settings for production
+export CATALINA_OPTS="-Xms512m -Xmx2048m -XX:PermSize=256m"
+
+# Database connection pool settings
+maxTotal="20" maxIdle="10" maxWaitMillis="10000"
 ```
 
-#### Get All Topics
-```bash
-curl -X GET http://localhost:8080/forum-app/api/topics \
-  -H "Accept: application/json"
-```
-
-## Security Features
-
-### Authentication & Authorization
-- **Session Management:** Secure session handling with timeouts
-- **Password Security:** BCrypt hashing with salt
-- **Input Validation:** XSS and injection attack prevention
-- **Access Control:** Users can only modify their own content
-
-### Data Protection
-- **SQL Injection Prevention:** Prepared statements used throughout
-- **Cross-Site Scripting (XSS) Protection:** Input sanitization
-- **CSRF Protection:** Token-based form submissions
-- **Secure Headers:** Proper HTTP security headers
-
-## Logging System
-
-The application maintains comprehensive logs for all activities:
-
-### Log Files Location
-```
-logs/
-├── comments.log    # Comment creation, updates, deletions
-├── replies.log     # Reply creation, updates, deletions
-├── users.log       # User registration, login activities
-└── topics.log      # Topic creation and management
-```
-
-### Log Entry Format
-```
-[2025-06-03 14:30:25] EVENT_TYPE | EntityID: 123 | UserID: 45 | User: John Doe | Details...
-```
-
-### Example Log Entries
-```
-[2025-06-03 14:30:25] COMMENT_CREATED | CommentID: 15 | TopicID: 3 | UserID: 2 | User: Jane Smith | Text: Great discussion topic!
-[2025-06-03 14:35:10] REPLY_CREATED | ReplyID: 8 | CommentID: 15 | UserID: 1 | User: John Doe | Text: I completely agree!
-[2025-06-03 14:40:05] USER_LOGIN | UserID: 3 | Email: admin@forum.com
-```
-
-## Troubleshooting
+## 🐛 Troubleshooting
 
 ### Common Issues
 
-#### Database Connection Problems
-**Symptom:** Application fails to start or shows database errors
-**Solutions:**
-1. Verify MySQL service is running
-2. Check database credentials in `DatabaseConfig.java`
-3. Ensure MySQL JDBC driver is in classpath
-4. Verify database exists and schema is applied
+#### Build Issues
+```bash
+# Clear Maven cache
+mvn dependency:purge-local-repository
 
-#### Login Issues
-**Symptom:** Cannot log in with correct credentials
-**Solutions:**
-1. Check if user account exists in database
-2. Verify password meets strength requirements
-3. Clear browser cookies and try again
-4. Check server logs for authentication errors
-
-#### File Upload/Logging Issues
-**Symptom:** Cannot create topics or comments
-**Solutions:**
-1. Check write permissions on application directory
-2. Verify `logs/` directory exists or can be created
-3. Check disk space availability
-4. Review application server logs
-
-#### Session Timeout Problems
-**Symptom:** Frequent logouts or session expired messages
-**Solutions:**
-1. Increase session timeout in `web.xml`
-2. Check server memory allocation
-3. Verify session configuration
-4. Clear browser cache
-
-### Performance Optimization
-
-#### Database Performance
-- **Indexing:** Ensure proper indexes on frequently queried columns
-- **Connection Pooling:** Configure connection pool in application server
-- **Query Optimization:** Review slow query logs
-
-#### Application Performance
-- **Memory Management:** Monitor heap usage and garbage collection
-- **Caching:** Implement caching for frequently accessed data
-- **Static Resources:** Use CDN for CSS/JS files in production
-
-## Development Information
-
-### Project Structure
-```
-src/
-├── main/
-│   ├── java/
-│   │   └── com/forum/
-│   │       ├── config/          # Database configuration
-│   │       ├── dao/             # Data Access Objects
-│   │       ├── filter/          # Servlet filters
-│   │       ├── listener/        # Event listeners
-│   │       ├── model/           # Data models
-│   │       ├── service/         # Business logic
-│   │       ├── servlet/         # Web controllers
-│   │       ├── util/            # Utility classes
-│   │       └── webservice/      # REST API endpoints
-│   ├── resources/               # Configuration files
-│   └── webapp/
-│       ├── WEB-INF/
-│       │   ├── jsp/             # JSP pages
-│       │   └── web.xml          # Web configuration
-│       ├── css/                 # Stylesheets
-│       ├── js/                  # JavaScript files
-│       └── images/              # Image assets
+# Rebuild with debug info
+mvn clean compile package -X
 ```
 
-### Technology Stack
-- **Java Version:** 8+
-- **Servlet API:** 4.0
-- **JSP Version:** 2.3
-- **Database:** MySQL 8.0
-- **Build Tool:** Maven 3.6+
-- **Web Server:** Apache Tomcat 9.0+
-- **Frontend:** Bootstrap 5, Font Awesome 6
-- **Logging:** Java Util Logging
+#### Database Connection Issues
+```bash
+# Test database connectivity
+mysql -u forum_user -p forum_db -e "SELECT 1;"
+
+# Check connection string format
+jdbc:mysql://localhost:3306/forum_db?useSSL=false&serverTimezone=UTC
+```
+
+#### Deployment Issues
+```bash
+# Check Tomcat logs
+tail -f $CATALINA_HOME/logs/catalina.out
+
+# Verify WAR file integrity
+jar -tf target/forum-app.war | head -20
+```
+
+For detailed troubleshooting, see the [Installation Guide](INSTALLATION_GUIDE.md#troubleshooting).
+
+## 📋 Development Guidelines
 
 ### Code Quality Standards
-- **Documentation:** Comprehensive JavaDoc for all classes and methods
-- **Naming Conventions:** JavaBeans naming standards followed
-- **Error Handling:** Try-catch blocks for all database operations
-- **Input Validation:** Server-side validation for all user inputs
-- **Code Organization:** Proper separation of concerns (MVC pattern)
+- **Documentation:** Comprehensive JavaDoc for all public methods
+- **Naming Conventions:** Follow Java naming standards
+- **Error Handling:** Proper exception handling throughout
+- **Code Organization:** Clear separation of concerns (MVC pattern)
+- **Testing:** Unit tests for business logic components
 
-## Support and Maintenance
+### Contribution Guidelines
+1. Follow existing code style and conventions
+2. Write comprehensive tests for new features
+3. Update documentation for any interface changes
+4. Ensure all tests pass before submitting changes
+5. Use meaningful commit messages
+
+## 📞 Support and Maintenance
 
 ### Regular Maintenance Tasks
-1. **Database Backup:** Schedule regular database backups
-2. **Log Rotation:** Implement log file rotation to manage disk space
-3. **Security Updates:** Keep all dependencies updated
-4. **Performance Monitoring:** Monitor application performance metrics
+- **Database Backup:** Schedule regular backups
+- **Log Rotation:** Implement log file rotation
+- **Security Updates:** Keep dependencies updated
+- **Performance Monitoring:** Monitor application metrics
 
 ### Backup Procedures
 ```bash
 # Database backup
-mysqldump -u username -p forum_db > forum_backup_$(date +%Y%m%d).sql
+mysqldump -u forum_user -p forum_db > forum_backup_$(date +%Y%m%d).sql
 
 # Application backup
-tar -czf forum_app_backup_$(date +%Y%m%d).tar.gz /path/to/forum-app/
+tar -czf forum_app_backup_$(date +%Y%m%d).tar.gz .
 ```
 
 ### Monitoring
-- **Application Logs:** Monitor application logs for errors
-- **Database Performance:** Watch for slow queries and connection issues
-- **User Activity:** Track user engagement and system usage
-- **Security Events:** Monitor for suspicious activities
+- Application logs: `$CATALINA_HOME/logs/`
+- Database performance: MySQL slow query log
+- User activity: Application activity logs
+- System resources: Memory and CPU usage
 
-## Contact Information
+## 📄 License and Academic Information
 
-**Developer:** Simphiwe Radebe  
+### Academic Project Details
+- **Course:** Advanced Java Programming (ITHCA0)
+- **Institution:** Eduvos
+- **Assessment:** Project 1 - Distributed Applications
+- **Submission Date:** June 13, 2025
+- **Academic Year:** 2025
+
+### Educational Purpose
+This application is developed as an academic project for educational purposes. It demonstrates:
+- Advanced Java programming concepts
+- Web application development with servlets and JSP
+- Database design and integration
+- RESTful web service implementation
+- Modern web UI development practices
+
+### Usage Rights
+This project is created for educational purposes and demonstrates original work developed specifically for Advanced Java Programming course requirements. All code and documentation represent original implementation following academic integrity guidelines.
+
+## 🤝 Contact Information
+
+**Developer:** Simphiwe Radebe
 **Institution:** Eduvos  
-**Course:** Advanced Java Programming (ITHCA0)  
-**Project Submission:** Week 6
+**Course:** Advanced Java Programming (ITHCA0)
 
-For technical support or questions about this application, please refer to the source code documentation or contact the development team.
-
-## License and Usage Rights
-
-This application is developed as an academic project for educational purposes. All code and documentation are original work created specifically for the Advanced Java Programming course requirements.
-
-**Note:** This application is designed for educational and demonstration purposes. For production deployment, additional security hardening and performance optimization should be implemented.
+For technical questions about this project, please refer to:
+- [Installation Guide](INSTALLATION_GUIDE.md) for setup issues
+- [User Guide](USER_GUIDE.md) for usage questions
+- Source code documentation for implementation details
 
 ---
 
-*Last Updated: June 3, 2025*  
-*Version: 1.0.0*
+**Last Updated:** June 13, 2025  
+**Version:** 1.0.0  
+**Status:** Production Ready
+
+---
+
+*This README provides a comprehensive overview of the Forum Application. For detailed setup instructions, see the [Installation Guide](INSTALLATION_GUIDE.md). For usage instructions, see the [User Guide](USER_GUIDE.md).*
